--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div align = 'center'><h1>TIC-TAC-TOE</h1></div>
     <div class="board " id="board">
         <div class="cell " data-cell></div>
         <div class="cell" data-cell></div>
