--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deepak portfolio</title>
+  <title>Deepak | Web Developer</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/phone.css">
 </head>
@@ -23,7 +23,7 @@
 
   <div id="home">
     <h1> DEEPAK SAINI</h1>
-    <h2> WEB DEVLOPER</h2>
+    <h2> WEB DEVELOPER</h2>
 
     <a href="./resume.html" target="blank" class="btn"> Resume</a>
   </div>
@@ -35,7 +35,7 @@
 
       <div>
         <p>
-          <b>Deepak Saini</b> is a Front-end Devloper . He specialise in creating beautiful , usable , professional websites and web application using best practice accesibility.
+          <b>Deepak Saini</b> is a Front-end Developer . He specialise in creating beautiful , usable , professional websites and web application using best practice accesibility.
           Currently he is working as campusambassador in <b>CodingNinjas</b> 
         </p>
       </div>
