--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
       <div class="item">
 
         <div class="item1 items  block">
-          <a href="https://webds.ninja/DragonGame/ " class="btn" target="blank"> DragonGame</a>
+          <a href="hhttps://rocksaini.github.io/DragonGame/ " class="btn" target="blank"> DragonGame</a>
         </div>
         <div class="item2  items  block ">
-          <a href="https://webds.ninja/tictactoe/ " class="btn" target="blank"> Tic-Tac-Toe</a>
+          <a href="https://rocksaini.github.io/tictactoe/ " class="btn" target="blank"> Tic-Tac-Toe</a>
         </div>
         <div class="item3 items block">
-          <a href="https://webds.ninja/DeliveryWebsite/ " class="btn" target="blank"> Food Delivery Website</a>
+          <a href="https://rocksaini.github.io/DeliveryWebsite/ " class="btn" target="blank"> Food Delivery Website</a>
         </div>
         <div class="item4 items  block">
-          <a href="https://webds.ninja/myNotes/ " class="btn" target="blank">Notes Application</a>
+          <a href="https://rocksaini.github.io/myNotes/ " class="btn" target="blank">Notes Application</a>
         </div>
 
       </div>
