--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="item">
 
         <div class="item1 items  block">
-          <a href="hhttps://rocksaini.github.io/DragonGame/ " class="btn" target="blank"> DragonGame</a>
+          <a href="https://rocksaini.github.io/DragonGame/ " class="btn" target="blank"> DragonGame</a>
         </div>
         <div class="item2  items  block ">
           <a href="https://rocksaini.github.io/tictactoe/ " class="btn" target="blank"> Tic-Tac-Toe</a>
