--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
   <footer class="footer">
-    <div>All Right Reserved! &copy; webds.ninja</div>
+    <div>&copy; 2021 webds.ninja All Rights Reserved.</div>
   </footer>
 
 </body>
