--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <h2>Keep in touch </h2>
     <ul class="contact-list">
       <li><a href="mailto:rocksaini732@gmail.com">rocksaini732@gmail.com</a></li>
-      <li><a href="https://webds.ninja" target="blank">webds.ninja</a></li>
+      <li><a href="https://portfolio" target="blank">https://rocksaini.github.io/</a></li>
       <li><a href="https://twitter.com/rocksaini_7?s=09" target="blank">twitter</a></li>
       <li><a href="https://www.linkedin.com/in/deepak-saini-050838198" target="blank">linkedin</a></li>
       <li><a href="https://github.com/rocksaini" target="blank">Github</a></li>
@@ -113,7 +113,7 @@
 
 
   <footer class="footer">
-    <div>&copy; 2021 webds.ninja All Rights Reserved.</div>
+    <div>&copy; 2021  All Rights Reserved.</div>
   </footer>
 
 </body>
