--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h1> DEEPAK SAINI</h1>
     <h2> WEB DEVELOPER</h2>
 
-    <a href="./resume.html" target="blank" class="btn"> Resume</a>
+    <a href="./DEEPAK_resume.pdf" target="blank" class="btn"> Resume</a>
   </div>
 
   <div id="about" class="content-wrap">
